--- a/gestion/templates/gestion/principal.html
+++ b/gestion/templates/gestion/principal.html
@@ -73,7 +73,7 @@
             </a>
         </div>
         <div class="service-box" style="--i:#FF464F">
-            <a href="agentes.html">
+            <a href="{% url 'agentes_list' %}">
                 <div class="icon">
                     <ion-icon name="rocket-outline"></ion-icon>
                     <span>AGENTES</span>
@@ -103,7 +103,7 @@
             </a>
         </div>
         <div class="service-box" style="--i:#540d6e">
-           <a href="operadoras.html">
+           <a href="{% url 'operadoras_list' %}">
             <div class="icon">
                 <ion-icon name="earth-outline"></ion-icon>
                 <span>OPERADORAS</span>
@@ -118,7 +118,7 @@
            </a>
         </div>
         <div class="service-box" style="--i:#36B47F">
-            <a href="proveedores.html">
+            <a  href="{% url 'proveedores' %}">
                 <div class="icon">
                     <ion-icon name="paper-plane-outline"></ion-icon>
                     <span>PROVEEDORES</span>
