--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-
+<!-- Esta es una prueba de commit-->
 <!DOCTYPE html>
 <html lang="es">
   <head>
@@ -11,12 +11,14 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/principal.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/scrollbar.css' %}">
 
-    <!-- Estilos para clientes -->
+    <!-- Estilos para clientes,proveedores -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/tarjeta.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/clientes.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 
-    <!-- Estilos para base -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="...">
+
+      <!-- Estilos para base -->
     <link rel="stylesheet" type="text/css" href={% static 'assets/css/sidemenu.css' %}>
     <link rel="stylesheet" type="text/css" href={% static 'Fonts/fuentes.css' %}>
     <link rel="stylesheet" type="text/css" href={% static 'assets/css/topmenu.css' %}>
@@ -24,6 +26,7 @@
     <link rel="shortcut icon" href={% static 'Imgs/SVG/SS-LOGO.svg' %}/>
     <title>POLARISS</title>
   </head>
+  {% block style %}{% endblock %}
   <body id="body-pd">
     <nav class="top-navbar" id="navtop">
         <span class="hide" id="pc-tittle">agencia de viajes</span>
@@ -86,45 +89,48 @@
               <ion-icon name="planet-outline" class="nav__icon"></ion-icon>
               <span class="nav__name">Principal</span>
             </a>
+
+              <a href="{% url 'clientes' %}" class="nav__link">
+              <ion-icon name="people-circle-outline" class="nav__icon"></ion-icon>
+              <span class="nav__name">Clientes</span>
+            </a>
+
+              <a href="#" class="nav__link">
+              <ion-icon name="rocket-outline" class="nav__icon"></ion-icon>
+              <span class="nav__name">Agentes</span>
+            </a>
+
+              <a href="#" class="nav__link">
+              <ion-icon name="earth-outline" class="nav__icon"></ion-icon>
+              <span class="nav__name">Operadoras</span>
+            </a>
+
+              <a href="{% url 'proveedores' %}" class="nav__link">
+              <ion-icon name="paper-plane-outline" class="nav__icon"></ion-icon>
+              <span class="nav__name">Proveedores</span>
+            </a>
+
             <a href="Vuelos.html" class="nav__link" target="iframe">
              <ion-icon name="airplane-outline" class="nav__icon"></ion-icon>
               <span class="nav__name">Vuelos</span>
             </a>
+
             <div class="nav__link collapse">
               <ion-icon name="bed-outline" class="nav__icon"></ion-icon>
               <span class="nav__name">Hospedaje</span>
-
               <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
-
               <ul class="collapse__menu">
                 <a href="#" class="collapse__sublink">Data</a>
                 <a href="#" class="collapse__sublink">Groups</a>
                 <a href="#" class="collapse__sublink">Members</a>
               </ul>
             </div>
-            <a href="#" class="nav__link">
-              <ion-icon name="boat-outline" class="nav__icon" ></ion-icon>
-              <span class="nav__name"> Cruceros</span>
-            </a>
+
+
             <div class="nav__link collapse">
               <ion-icon name="bus-outline" class="nav__icon"></ion-icon>
               <span class="nav__name">Terrestres</span>
-
               <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
-
-              <ul class="collapse__menu">
-                <a href="#" class="collapse__sublink">Data</a>
-                <a href="#" class="collapse__sublink">Groups</a>
-                <a href="#" class="collapse__sublink">Members</a>
-              </ul>
-            </div>
-
-            <div class="nav__link collapse">
-              <ion-icon name="ribbon-outline" class="nav__icon"></ion-icon>
-              <span class="nav__name">Finanzas</span>
-
-              <ion-icon name="chevron-down-outline" class="collapse__link"></ion-icon>
-
               <ul class="collapse__menu">
                 <a href="#" class="collapse__sublink">Data</a>
                 <a href="#" class="collapse__sublink">Groups</a>
@@ -188,6 +194,7 @@
     <!--Scripts para clientes-->
     <script src="{% static 'assets/js/clientes.js' %}"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="..."></script>
 
     <!--IONICONS-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
