--- a/clientes/templates/clientes/clientes.html
+++ b/clientes/templates/clientes/clientes.html
@@ -83,7 +83,7 @@
         </form>
 
 
-        <!-- Seccion Eliminar -->
+        <!-- Seccion CRUDS -->
         <div class="recientes">
             <div class="titulo">
                 <h2>Clientes registrados</h2>
@@ -119,7 +119,6 @@
                 </tbody>
             </table>
         </div>
-
         <img src="{% static 'Imgs/delete.png' %}" alt="Borrar un cliente" class="img-delete">
     </div>
 
@@ -156,8 +155,9 @@
         <ion-icon name="ellipsis-horizontal-outline" class="submenuCard"></ion-icon>
         <div class="submenuC">
             <div class="opccionesC">
-                <div><ion-icon name="add-circle-outline"></ion-icon>Agregar</div>
-                <div><ion-icon name="brush-outline"></ion-icon>Modificar</div>
+                <div><ion-icon name="add-circle-outline"></ion-icon>Modificar</div>
+                <div><ion-icon name="trash-outline"></ion-icon>Eliminar</div>
+
             </div>
         </div>
         <div class="card-header">
@@ -168,9 +168,7 @@
             <a href="#" class="mail">marisolsnz@gmail.com</a>
             <div class="content2">
                 <p class="texto"><span class="municipio">Sahuayo</span></p>
-                <ion-icon name="remove-outline"></ion-icon>
                 <p class="texto"><span class="edad">24 años</span></p>
-                <ion-icon name="remove-outline"></ion-icon>
                 <p class="texto"><span class="telefono">3531216500</span></p>
             </div>
             <p class="saldo">Saldo: 12,560</p>
@@ -286,6 +284,8 @@
                     </ul>
                 </div>
             </div>
+
+
             <!-- CLIENTES RECIENTES -->
             <div class="ops-right">
                 <div class="header">
@@ -293,85 +293,22 @@
                 </div>
                 <table>
                     <tbody class="clientesRC">
-                        <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us1.jpg' %}"></div></td>
-                            <td><h4>Marisol</h4>ID: &nbsp<span class="idT">1251301</span>
-                                <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div>
-                            </td>
-                         </tr>
-                         <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us2.jpg' %}"></div></td>
-                            <td><h4>Dario</h4>ID: &nbsp<span class="idT">1251302</span>
-                            <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div>
-                            </td>
-                         </tr>
-                         <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us3.jpg' %}"></div></td>
-                            <td><h4>Marcelo</h4>ID: &nbsp<span class="idT">1251303</span>
-                            <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div>
-                            </td>
-                         </tr>
-                         <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us4.jpg' %}"></div></td>
-                            <td><h4>Juan</h4>ID: &nbsp<span class="idT">1251304</span>
-                            <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div>
-                            </td>
-                         </tr>
-                         <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us5.jpeg' %}"></div></td>
-                            <td><h4>Rosa</h4>ID: &nbsp<span class="idT">1251305</span>
-                            <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div>
-                            </td>
-                         </tr>
-                         <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us6.jpeg' %}"></div></td>
-                            <td><h4>Julieta</h4>ID: &nbsp<span class="idT">1251306</span>
-                                <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div></td>
-                         </tr>
-                         <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us7.png' %}"></div></td>
-                            <td><h4>Simon</h4>ID: &nbsp<span class="idT">1251307</span>
-                            <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div>
-                            </td>
-                         </tr>
-                         <tr>
-                            <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us8.jpeg' %}"></div></td>
-                            <td><h4>Andres</h4>ID: &nbsp<span class="idT">1251308</span>
-                            <div class="iconos">
-                                    <ion-icon class="profile" name="person-circle-outline"></ion-icon>
-                                    <ion-icon name="mail-outline"></ion-icon>
-                                    <ion-icon name="call-outline"></ion-icon>
-                                </div>
-                            </td>
-                         </tr>
+
+                        {% for cliente in clientes %}
+
+                            <tr class="trC">
+                                <td width="60px" class="tdi"><div class="imbBx"><img src="{% static 'Imgs/us1.jpg' %}"></div></td>
+                                <td><h4>{{ cliente.usuarioc }}</h4>ID: &nbsp<span class="idT">{{ cliente.idcliente }}</span>
+                                    <div class="iconos">
+                                        <ion-icon class="profile" name="person-circle-outline"></ion-icon>
+                                        <ion-icon name="mail-outline"></ion-icon>
+                                        <ion-icon name="call-outline"></ion-icon>
+                                    </div>
+                                </td>
+                            </tr>
+
+                        {% endfor %}
+
                     </tbody>
                 </table>
                 </div>
