--- a/operadoras/templates/operadoras_new.html
+++ b/operadoras/templates/operadoras_new.html
@@ -37,7 +37,7 @@
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-{#                            <h6 class="m-0 font-weight-bold text-primary">Listado Operadoras</h6>#}
+                {# <h6 class="m-0 font-weight-bold text-primary">Listado Operadoras</h6> #}
             </div>
             <div class="card-body">
                 {{ mensaje }}
@@ -48,13 +48,15 @@
                         <a href="{% url 'operadoras:operadoras_list' %}" class="btn btn-secondary btn-icon-split">
                             <span class="icon text-white-50">
                                 <i class="fas fa-forward"></i>
-                            </span><span class="text">Cancelar</span>
+                            </span>
+                            <span class="text">Cancelar</span>
                         </a>
                         &nbsp;
                         <button type="submit" class="btn btn-primary btn-icon-split">
-                             <span class="icon text-white-50">
+                            <span class="icon text-white-50">
                                 <i class="fas fa-save"></i>
-                            </span><span class="text">Guardar</span>
+                            </span>
+                            <span class="text">Guardar</span>
                         </button>
                     </div>
                 </form>
@@ -62,4 +64,5 @@
             </div>
         </div>
     </div>
- </body>
+</body>
+
