--- a/static/assets/css/tarjeta.css
+++ b/static/assets/css/tarjeta.css
@@ -13,7 +13,7 @@
     z-index: 100000;
     width: 450px;
     max-width: 450px;
-    margin: 150px auto 0;
+    margin: 100px auto 0;
     background-color: white;
     box-shadow: 0 10px 90px #00000024;
     text-align: center;
@@ -47,7 +47,7 @@
     cursor: pointer;
     z-index: 100000;
 }
-.card .submenu{
+.card .submenuCard{
     position: absolute;
     right: 10px  ;
     top: 12px;
@@ -181,14 +181,15 @@
 }
 
 .card .submenuC.showC{
-    display: inline-block;
+    display: flex;
     background-color: white;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 10px;
     position: absolute;
-    top: -70px;
-    right: -170px;
+    top: 40px;
+    right: 0px;
     font-size: 16px;
+    z-index: 1000;
 }
 
 .card .submenuC .opccionesC
@@ -202,13 +203,12 @@
 .card .submenuC .opccionesC div{
     padding: 10px 20px;
     width: 145px;
-    height: 22px;
+    height: 100%;
     display: flex;
     text-align: left;
     cursor: pointer;
     border-radius: 10px;
     transition: 0.3s ease-in-out;
-
 }
 .card .submenuC .opccionesC div:hover{
     background-color: #c74385;
