Se añadieron los CRUDS actualizados de agentes y operadoras.

--- a/gestion/templates/gestion/principal.html
+++ b/gestion/templates/gestion/principal.html
@@ -73,7 +73,7 @@
             </a>
         </div>
         <div class="service-box" style="--i:#FF464F">
-            <a href="{% url 'agentes_list' %}">
+            <a href="{% url 'agentes' %}">
                 <div class="icon">
                     <ion-icon name="rocket-outline"></ion-icon>
                     <span>AGENTES</span>
@@ -103,7 +103,7 @@
             </a>
         </div>
         <div class="service-box" style="--i:#540d6e">
-           <a href="{% url 'operadoras_list' %}">
+           <a href="{% url 'operadoras' %}">
             <div class="icon">
                 <ion-icon name="earth-outline"></ion-icon>
                 <span>OPERADORAS</span>
