--- a/operadoras/templates/operadoras/operadoras.html
+++ b/operadoras/templates/operadoras/operadoras.html
@@ -167,7 +167,7 @@
         <div class="recientes">
             <div class="titulo">
                 <h2>Lista de Operadoras </h2>
-                <a href="#" class="btn">Ver todos</a>
+                <a href="{% url 'operadoras:operadoras_list' %}"  class="btn btn-dark">Ver todos</a>
             </div>
             <table>
                 <thead>
