--- a/operadoras/templates/operadoras/operadoras.html
+++ b/operadoras/templates/operadoras/operadoras.html
@@ -202,7 +202,7 @@
                 <div class="minimizar-ops">
                     <ion-icon name="close-outline"></ion-icon>
                 </div>
-                <a href="#" class="btn-expand">Realizar una nueva reservacion</a>
+                <a href="#" class="btn-expand">Menú Operadoras</a>
                     <h2>Operaciones de Operadoras </h2>
                 <div class="opciones">
                     <ul>
