--- a/agentes/templates/agentes/agentes.html
+++ b/agentes/templates/agentes/agentes.html
@@ -197,7 +197,7 @@
         <div class="recientes">
             <div class="titulo">
                 <h2>Lista de agentes </h2>
-                <a href="#" class="btn">Ver todos</a>
+                <a href="{% url 'agentes:agentes_list' %}"  class="btn btn-dark">Ver todos</a>
             </div>
             <table>
                 <thead>
