VBC de proveedores (CRUDS)

--- a/proveedores/templates/proveedores/proveedores.html
+++ b/proveedores/templates/proveedores/proveedores.html
@@ -199,7 +199,7 @@
         <div class="recientes">
             <div class="titulo">
                 <h2>Proveedores Frecuentes </h2>
-                <a href="#" class="btn">Ver todos</a>
+                <a href="{% url 'proveedores:proveedor_list' %}" class="btn btn-dark">Ver todos</a>
             </div>
             <table>
                 <thead>
