Actualizacion de reservas

--- a/clientes/templates/clientes/clientes_new.html
+++ b/clientes/templates/clientes/clientes_new.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block content %}
+
     <!-- Begin Page Content -->
     <div class="container-fluid">
 
@@ -48,4 +49,8 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascript %}
+
 {% endblock %}
