--- a/gestion/templates/gestion/principal.html
+++ b/gestion/templates/gestion/principal.html
@@ -43,7 +43,7 @@
 
     <div class="container">
         <div class="service-box" style="--i:#4EB5FD">
-            <a href="reservas.html">
+            <a href="{% url 'reservacionesV' %}">
                 <div class="icon">
                     <ion-icon name="calendar-number-outline"></ion-icon>
                     <span>RESERVACIONES</span>
@@ -88,7 +88,7 @@
             </a>
         </div>
         <div class="service-box" style="--i:#F0A908">
-            <a href="paquetes.html">
+            <a href="{% url 'paquetes' %}">
                 <div class="icon">
                     <ion-icon name="cube-outline"></ion-icon>
                     <span>PAQUETES</span>
