--- a/static/assets/css/Vuelos.css
+++ b/static/assets/css/Vuelos.css
@@ -1,36 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-*
-{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-html {
-    box-sizing: border-box;
-    font-size: 62.5%;
-}
+/*Toggle buttons*/
 
-iframe {height:93.1vh; }
 
-*,
-*:before,
-*:after {
-    box-sizing: inherit;
-}
-
-body {
-
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.6rem;
-    background-color:#f0f0f0;
-}
-
-img,
-svg 
-{
-    max-width: 100%;/*Maximo del contenedor*/
+.grid a{
+    color: var(--black1);
 }
 
 .grid
@@ -70,7 +45,7 @@ svg
         border-bottom-right-radius: 30px;
         background: white;
         border-top-left-radius: 30px;
-        
+
         box-shadow: 0px 5px 10px rgba(0, 0, 0, .16);
     }
 
@@ -82,7 +57,6 @@ svg
 
             border-top-left-radius: 30px;
             border-bottom-left-radius: 30px;
-            border-bottom-right-radius: 30px;
         }
 
         .V .t2
@@ -148,7 +122,7 @@ svg
         flex-wrap: wrap;
         overflow-y: scroll;
         cursor: auto;
-        
+
         top: calc(100% + 25px);
         left: 5%;
         z-index: 1;
@@ -156,7 +130,7 @@ svg
         width: 90%;
         height: 200px;
         background: white;
-        
+
         border-radius: 10px;
         border: #535353 solid 1px;
         box-shadow: 0px 5px 10px rgba(252, 0, 0, 0.50);
@@ -247,7 +221,7 @@ svg
     .P:hover,
     .cont:hover
     {
-        box-shadow: 0px 5px 10px rgba(252, 0, 0, 0.50); 
+        box-shadow: 0px 5px 10px rgba(252, 0, 0, 0.50);
     }
 
     .D.active:before,
@@ -281,7 +255,7 @@ svg
         .t4
         {
             display: none;
-            
+
             width: 100%;
             height: max-content;
             text-align: center;
@@ -405,7 +379,7 @@ svg
         width: 100%;
         height: 100px;
         background: white;
-        
+
         border-radius: 10px;
         border: #535353 solid 1px;
         box-shadow: 0px 5px 10px rgba(252, 0, 0, 0.50);
@@ -496,7 +470,7 @@ svg
 
                     margin-left: 10px;
                     margin-right: 10px;
-    
+
                     font-size: 30px;
                     font-weight: 300px;
                     font-family: 'Poppins';
@@ -525,7 +499,7 @@ svg
             font-weight: 300px;
             font-family: 'Poppins';
         }
-    
+
     .P .icon2
     {
         position: absolute;
@@ -557,18 +531,18 @@ svg
         background: #F54043;
         color: white;
 
-        box-shadow: 0px 5px 10px rgba(0, 0, 0, .16);     
+        box-shadow: 0px 5px 10px rgba(0, 0, 0, .16);
     }
     .B .t6
     {
         display: flex;
         text-align: center;
-        
+
         font-family: 'Poppins';
         font-size: 30px;
         font-weight: 300px;
         text-transform: uppercase;
-        
+
     }
 
 .grid2
@@ -614,7 +588,7 @@ svg
     height: 0;
     z-index: 1000;
     background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(8px); 
+    backdrop-filter: blur(8px);
     transition: all 0.1s ease;
 }
 
@@ -634,7 +608,7 @@ svg
         width: 100%;
         height: 200px;
         background: white;
-        
+
         border-radius: 10px;
         border: #535353 solid 1px;
         box-shadow: 0px 5px 10px rgba(252, 0, 0, 0.50);
@@ -648,11 +622,11 @@ svg
         position: relative;
         display: grid;
         column-gap: 46px;
-    
+
         grid-template-columns: calc(50% - 23px) calc(50% - 23px);
         grid-template-rows:  101px 210px 210px 118px 86px;
         grid-template-areas: 'V V' 'O O' 'D D' 'Fs Fl' 'P B';
-    
+
         margin-left: 10%;
         margin-top: 84px;
         width: 80%;
@@ -746,9 +720,9 @@ svg
     .t3
     {
         margin-top: 0;
-        width: min-content; 
+        width: min-content;
         height: max-content;
-    }  
+    }
 
     .P.active:before
     {
@@ -782,7 +756,7 @@ svg
         width: 250px;
         height: 200px;
         background: white;
-        
+
         border-radius: 10px;
         border: #535353 solid 1px;
         box-shadow: 0px 5px 10px rgba(252, 0, 0, 0.50);
@@ -811,7 +785,7 @@ svg
         grid-template-columns: 100%;
         grid-template-rows:  101px 150px 150px 70px 70px max-content 86px;
         grid-template-areas: 'V' 'O' 'D' 'Fs'  'Fl' 'P' 'B';
-    
+
         margin-left: 10%;
         margin-top: 20px;
         width: 80%;
@@ -828,7 +802,7 @@ svg
     .Fs,
     .Fl
     {
-        align-content: center;   
+        align-content: center;
     }
 
     .t5
@@ -876,7 +850,7 @@ svg
         width: 100%;
         height: 200px;
         background: white;
-        
+
         border-radius: 10px;
         border: #535353 solid 1px;
         box-shadow: 0px 5px 10px rgba(252, 0, 0, 0.50);
@@ -916,11 +890,11 @@ svg
         position: relative;
         display: grid;
         column-gap: 46px;
-    
+
         grid-template-columns: 100%;
         grid-template-rows:  101px 200px 200px 70px 70px max-content 86px;
         grid-template-areas: 'V' 'O' 'D' 'Fs' 'Fl' 'P' 'B';
-    
+
         margin-left: 10%;
         margin-top: 20px;
         width: 80%;
