--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+      <link rel="stylesheet" type="text/css" href="{% static 'assets/css/Vuelos.css' %}">
+
+      <!--CHATBOT-->
+      <script src="//code.tidio.co/cbxjvlfogixxmic4bqy5cgf47kscrdps.js" async></script>
+
     <!-- Estilos para principal -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/principal.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/scrollbar.css' %}">
@@ -15,6 +20,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/tarjeta.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/clientes.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
+       <!-- Estilos para reservas y paquetes -->
+      <link rel="stylesheet" type="text/css" href="assets/css/reservas.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/scrollbar.css">
 
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="...">
 
@@ -194,6 +203,7 @@
     <!--Scripts para clientes-->
     <script src="{% static 'assets/js/clientes.js' %}"></script>
 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="..."></script>
 
     <!--IONICONS-->
@@ -231,5 +241,6 @@
     {% block java %}
 
     {% endblock %}
+
   </body>
 </html>
